--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,11 @@
-appscript==1.2.2
 asgiref==3.5.2
 cffi==1.15.1
 cobble==0.1.3
+colorama==0.4.6
 Django==3.2
 django-cors-headers==3.13.0
-djangorestframework==3.14.0
 docx==0.2.4
 docx2pdf==0.1.8
-docxcompose==1.3.6
-docxtpl==0.16.4
 fpdf==1.7.2
 Jinja2==3.1.2
 lxml==4.9.1
@@ -17,11 +14,10 @@ MarkupSafe==2.1.1
 pdfkit==1.0.0
 Pillow==9.3.0
 pycparser==2.21
-pylokit==0.8.1
 python-docx==0.8.11
 pytz==2022.6
+pywin32==305
 reportlab==3.6.12
 six==1.16.0
 sqlparse==0.4.3
-templated-docs==0.3.1
 tqdm==4.64.1
